--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -234,9 +234,6 @@
   .work-container {
     align-content: normal;
   }
-  .work-flex {
-    height: auto;
-  }
 }
 
 .finale-box {
